fix: align font size of link with wrapping text

--- a/sass/pages/manual.scss
+++ b/sass/pages/manual.scss
@@ -110,4 +110,8 @@ html.light-theme {
 h2 {
     border-top: 1px solid var(--foreground);
     padding-top: 1rem;
+
+    &>a {
+        font-size: 1.5rem;
+    }
 }
